# TencentDB-Agent-Memory

./: openclaw.plugin.json
mcp-server-rs/: Cargo.toml  README.md
mcp-server-rs/hooks/: stop-hook.cjs
mcp-server-rs/src/: main.rs
src/core/store/: embedding.ts
