[package]
name = "tencentdb-memory-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server adapter for TencentDB-Agent-Memory Gateway (Rust)"

[[bin]]
name = "tencentdb-memory-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
